# wamr-app-framework

./: .gitignore  README.md
app-mgr/app-manager/: module_wasm_app.c
samples-original/littlevgl/vgl-wasm-runtime/: CMakeLists.txt
samples/gui/: 1111  1111.c  CtoWasmTest.c  CtoWasmTest.wasm  README.md  build.sh  example.c  func_info.txt  func_info2.txt  grap2  libsdl_graphics2.c  moving_rectangle  moving_rectangle_32  sdl_color_example  sdl_color_example.c  sdl_color_example.wasm  sdl_grap3  sdl_grap3.c  sdl_grap4.c  sdl_grap5.c  sdl_graphics.c  sdl_graphics2.c  sdl_rect_lib.c  test.wasm  ui_app_wasi0705.wasm  ui_inc_log.txt  wamr_config_gui.cmake  wget-log  wget-log.1  wget-log.2
samples/gui/apps/: change_color.wasm  import_test.wasm  shoot.wasm  ui_dashborad1.wasm  ui_dashborad2.wasm
samples/gui/wasm-apps/: build_apps.sh
samples/gui/wasm-apps/decrease/: Makefile
samples/gui/wasm-apps/increase/: CMakeLists.txt  Makefile
samples/gui/wasm-apps/increase/src/: main-app.c  main-foo.c  main-sdl241028.c  main-sdl241029  main.c  mystr.h
samples/gui/wasm-apps/increase/src/SDL2/: SDL_stdinc.h
samples/gui/wasm-runtime-wgl/linux-build/: CMakeLists.txt
samples/gui/wasm-runtime-wgl/src/platform/linux/: iwasm_main.c  iwasm_main_add_nativelib_option.c  iwasm_main_native_malloc.c  iwasm_main_original.c
samples/gui/zlib_build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  example  example64  minigzip  minigzip64
samples/gui/zlib_build/host-tool/: Makefile
samples/gui/zlib_build/wasm-runtime-wgl/: log.txt  wasm_runtime_wgl
samples/gui/zlog-1.2.18/cmake/: LoadLibraries.cmake
samples/gui/zlog-1.2.18/src/: zlog-chk-conf
samples/gui/새 폴더/: libSDL2-2.0.so.0.3100.0
samples/littlevgl/: README.md  build.sh  wamr_config_littlevgl.cmake
samples/littlevgl/llvm_build_script/: build_llvm_aarch64.py  build_llvm_aarch64.sh  build_llvm_x86_64.py  build_llvm_x86_64.sh
samples/littlevgl/vgl-native-ui-app/: CMakeLists.txt
samples/littlevgl/vgl-native-ui-app/lv-drivers/: linux_display_indev.c
samples/littlevgl/vgl-native-ui-app/lv-drivers/indev/: mouse.h
samples/littlevgl/vgl-wasm-runtime/: CMakeLists.txt
samples/littlevgl/vgl-wasm-runtime/src/platform/linux/: display_indev.c  iwasm_main.c  mouse.c
test-tools-original/IoT-APP-Store-Demo/wasm_django/devices/templates/: help.html
wamr-sdk/: build_sdk.sh
wamr-sdk-original/runtime/build-runtime-sdk/: CMakeCache.txt  Makefile  cmake_install.cmake
wamr-sdk/app/: CMakeLists.txt
wamr-sdk/runtime/: CMakeLists.txt
wamr-sdk/runtime/build-runtime-sdk/: CMakeCache.txt  Makefile  cmake_install.cmake  test_wrgsbase.c
